# Balash-new

./: .gitignore  Balash-new.code-workspace  CMakeLists.txt  CMakePresets.json  Makefile  README.md  balash  domestos.ps1  engine.cpp  engine.hpp  libs.hpp  linux.cpp  linux.cppp  linux.hpp  main.cpp  misc.cpp  msys2-install-libs.sh  msys2compile.sh  msys2domestos.sh  pkgbuild  shad.fsh  shad.vsh  skyfrag.glsl  skyvert.glsl  vcpkg.json
assets/: girl.mtl
loaders/: fontloader.cpp  loaders.hpp  objloader.cpp  pngloader.cpp  shaderloader.cpp
objects/: NURBS.cpp  NURBS.hpp  lightcube.cpp  lightcube.hpp
objects/NURBS/: NURBS.cpp  NURBS.hpp
objects/anim/: AnimMesh.cpp  AnimMesh.hpp  Animation.cpp  Animation.hpp  Animator.hpp  Bone.cpp  Bone.hpp
objects/particle/: particle.cpp  particle.hpp
objects/tess/: tess.cpp  tess.hpp
shaders/: bezier.geom  bezier.tcs.glsl  bezier.tes.glsl  main.frag  main.geom  main.vert  maincopy.frag  normal.frag  rtxphong.frag  simple.frag  simple.vert
shaders/anim/: anim.frag  anim.vert
shaders/cyber/: cyber.frag  cyber.geom  cyber.tcs.glsl  cyber.tes.glsl  cyber.vert
shaders/particle/: particle.frag  particle.geom  particle.tcs.glsl  particle.tes.glsl  particle.vert
utils/: controls.cpp  controls.hpp  skybox.cpp  skybox.hpp  vectorfp.cpp  vectorfp.hpp
